--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,204 +8,214 @@
   <title>Frontend Mentor | Job Listings</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-<header class="header">
+  <header class="header">
 
-</header>
+  </header>
 
-<section class="jobs">
+  <div class="container">
+    <section class="jobs">
+      <article class="job">
+        <div class="job__logo">
+          <img class="job__img" src="./images/photosnap.svg" alt="">
+        </div>
+        <div class="job__header">
+          <span class="job__company">Photosnap</span>
+          <span class="job__label">New!</span>
+          <span class="job__label job__label--dark">Featured</span>
+        </div>
+        <p class="job__title">Senior Frontend Developer</p>
+        <div class="job__details">
+          <span class="job__detail">1d ago</span>
+          <span class="job__detail">Full Time</span>
+          <span class="job__detail">USA only</span>
+        </div>
 
-<article>
-      <!-- Item Start -->
-      Photosnap
-      New!
-      Featured
-      Senior Frontend Developer
-      1d ago
-      Full Time
-      USA only
-      <!-- Role -->
-      Frontend
-      <!-- Level -->
-      Senior
-      <!-- Languages -->
-      HTML
-      CSS
-      JavaScript
-      <!-- Item End -->
-</article>
+        <hr class="job__dec-line">
+
+        <div class="job__tags">
+          <span class="job__tag">Frontend</span>
+          <span class="job__tag">Senior</span>
+          <span class="job__tag">HTML</span>
+          <span class="job__tag">CSS</span>
+          <span class="job__tag">JavaScript</span>
+        </div>
+      </article>
 
 
-<article>
-    <!-- Item Start -->
-    Manage
-    New!
-    Featured
-    Fullstack Developer
-    1d ago
-    Part Time
-    Remote
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    Python
-    <!-- Tools -->
-    React
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        Manage
+        New!
+        Featured
+        Fullstack Developer
+        1d ago
+        Part Time
+        Remote
+        <!-- Role -->
+        Fullstack
+        <!-- Level -->
+        Midweight
+        <!-- Languages -->
+        Python
+        <!-- Tools -->
+        React
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    Account
-    New!
-    Junior Frontend Developer
-    2d ago
-    Part Time
-    USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    React
-    Sass
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        Account
+        New!
+        Junior Frontend Developer
+        2d ago
+        Part Time
+        USA only
+        <!-- Role -->
+        Frontend
+        <!-- Level -->
+        Junior
+        <!-- Languages -->
+        JavaScript
+        <!-- Tools -->
+        React
+        Sass
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    MyHome
-    Junior Frontend Developer
-    5d ago
-    Contract
-    USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    CSS
-    JavaScript
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        MyHome
+        Junior Frontend Developer
+        5d ago
+        Contract
+        USA only
+        <!-- Role -->
+        Frontend
+        <!-- Level -->
+        Junior
+        <!-- Languages -->
+        CSS
+        JavaScript
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    Loop Studios
-    Software Engineer
-    1w ago
-    Full Time
-    Worldwide
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    JavaScript
-    Ruby
-    <!-- Tools -->
-    Sass
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        Loop Studios
+        Software Engineer
+        1w ago
+        Full Time
+        Worldwide
+        <!-- Role -->
+        Fullstack
+        <!-- Level -->
+        Midweight
+        <!-- Languages -->
+        JavaScript
+        Ruby
+        <!-- Tools -->
+        Sass
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    FaceIt
-    Junior Backend Developer
-    2w ago
-    Full Time
-    UK only
-    <!-- Role -->
-    Backend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    Ruby
-    <!-- Tools -->
-    RoR
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        FaceIt
+        Junior Backend Developer
+        2w ago
+        Full Time
+        UK only
+        <!-- Role -->
+        Backend
+        <!-- Level -->
+        Junior
+        <!-- Languages -->
+        Ruby
+        <!-- Tools -->
+        RoR
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    Shortly
-    Junior Developer
-    2w ago
-    Full Time
-    Worldwide
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    HTML
-    JavaScript
-    <!-- Tools -->
-    Sass
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        Shortly
+        Junior Developer
+        2w ago
+        Full Time
+        Worldwide
+        <!-- Role -->
+        Frontend
+        <!-- Level -->
+        Junior
+        <!-- Languages -->
+        HTML
+        JavaScript
+        <!-- Tools -->
+        Sass
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    Insure
-    Junior Frontend Developer
-    2w ago
-    Full Time
-    USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    Vue
-    Sass
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        Insure
+        Junior Frontend Developer
+        2w ago
+        Full Time
+        USA only
+        <!-- Role -->
+        Frontend
+        <!-- Level -->
+        Junior
+        <!-- Languages -->
+        JavaScript
+        <!-- Tools -->
+        Vue
+        Sass
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    Eyecam Co.
-    Full Stack Engineer
-    3w ago
-    Full Time
-    Worldwide
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    JavaScript
-    Python
-    <!-- Tools -->
-    Django
-    <!-- Item End -->
-</article>
+      <article>
+        <!-- Item Start -->
+        Eyecam Co.
+        Full Stack Engineer
+        3w ago
+        Full Time
+        Worldwide
+        <!-- Role -->
+        Fullstack
+        <!-- Level -->
+        Midweight
+        <!-- Languages -->
+        JavaScript
+        Python
+        <!-- Tools -->
+        Django
+        <!-- Item End -->
+      </article>
 
-<article>
-    <!-- Item Start -->
-    The Air Filter Company
-    Front-end Dev
-    1mo ago
-    Part Time
-    Worldwide
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    React
-    Sass
-    <!-- Item End -->
-</article>
-  
-</section>
+      <article>
+        <!-- Item Start -->
+        The Air Filter Company
+        Front-end Dev
+        1mo ago
+        Part Time
+        Worldwide
+        <!-- Role -->
+        Frontend
+        <!-- Level -->
+        Junior
+        <!-- Languages -->
+        JavaScript
+        <!-- Tools -->
+        React
+        Sass
+        <!-- Item End -->
+      </article>
+
+    </section>
+  </div>
 </body>
+
 </html>
