--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div class="container">
     <section class="jobs">
-      <article class="job">
+      <!-- <article class="job">
         <div class="job__content">
           <div class="job__logo">
             <img class="job__img" src="./images/photosnap.svg" alt="">
@@ -63,217 +63,11 @@
             <button class="job__tag">JavaScript</button>
           </div>
         </div>
-      </article>
-
-      <article class="job">
-        <div class="job__content">
-          <div class="job__logo">
-            <img class="job__img" src="./images/manage.svg" alt="">
-          </div>
-          <div>
-            <div class="job__header">
-              <span class="job__company">Manage</span>
-              <span class="job__label">New!</span>
-              <span class="job__label job__label--dark">Featured</span>
-            </div>
-            <p class="job__title">Fullstack Developer</p>
-            <div class="job__details">
-              <span class="job__detail">1d ago</span>
-              <span class="job__detail">Part Time</span>
-              <span class="job__detail">Remote</span>
-            </div>
-          </div>
-
-          <hr class="job__dec-line">
-
-          <div class="job__tags">
-            <button class="job__tag">Fullstack</button>
-            <button class="job__tag">Midweight</button>
-            <button class="job__tag">Python</button>
-            <button class="job__tag">React</button>
-          </div>
-        </div>
-      </article>
-
-
-      <article>
-        <!-- Item Start -->
-        Manage
-        New!
-        Featured
-        Fullstack Developer
-        1d ago
-        Part Time
-        Remote
-        <!-- Role -->
-        Fullstack
-        <!-- Level -->
-        Midweight
-        <!-- Languages -->
-        Python
-        <!-- Tools -->
-        React
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        Account
-        New!
-        Junior Frontend Developer
-        2d ago
-        Part Time
-        USA only
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        JavaScript
-        <!-- Tools -->
-        React
-        Sass
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        MyHome
-        Junior Frontend Developer
-        5d ago
-        Contract
-        USA only
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        CSS
-        JavaScript
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        Loop Studios
-        Software Engineer
-        1w ago
-        Full Time
-        Worldwide
-        <!-- Role -->
-        Fullstack
-        <!-- Level -->
-        Midweight
-        <!-- Languages -->
-        JavaScript
-        Ruby
-        <!-- Tools -->
-        Sass
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        FaceIt
-        Junior Backend Developer
-        2w ago
-        Full Time
-        UK only
-        <!-- Role -->
-        Backend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        Ruby
-        <!-- Tools -->
-        RoR
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        Shortly
-        Junior Developer
-        2w ago
-        Full Time
-        Worldwide
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        HTML
-        JavaScript
-        <!-- Tools -->
-        Sass
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        Insure
-        Junior Frontend Developer
-        2w ago
-        Full Time
-        USA only
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        JavaScript
-        <!-- Tools -->
-        Vue
-        Sass
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        Eyecam Co.
-        Full Stack Engineer
-        3w ago
-        Full Time
-        Worldwide
-        <!-- Role -->
-        Fullstack
-        <!-- Level -->
-        Midweight
-        <!-- Languages -->
-        JavaScript
-        Python
-        <!-- Tools -->
-        Django
-        <!-- Item End -->
-      </article>
-
-      <article>
-        <!-- Item Start -->
-        The Air Filter Company
-        Front-end Dev
-        1mo ago
-        Part Time
-        Worldwide
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        JavaScript
-        <!-- Tools -->
-        React
-        Sass
-        <!-- Item End -->
-      </article>
-
+      </article> -->
     </section>
   </div>
 
-  <script>
-    document.addEventListener("click", (e) => {
-      console.log(e.target);
-    })
-  </script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
